# aliasmine

./: CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: mining.md
examples/: README.md  sample_aliases.sh  sample_bash_history  sample_zsh_history
scripts/: smoke.sh
src/aliasmine/: __init__.py  __main__.py  cli.py  errors.py  existing.py  history.py  mining.py  naming.py  normalize.py  pipeline.py  report.py  savings.py
tests/: conftest.py  test_cli.py  test_existing.py  test_history_bash.py  test_history_detect.py  test_history_fish.py  test_history_zsh.py  test_mining.py  test_naming.py  test_normalize.py  test_pipeline.py  test_report_export.py  test_savings.py
