[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aliasmine"
version = "0.1.0"
description = "Mine your shell history for the long commands you retype hundreds of times; propose collision-checked aliases with quantified keystroke savings."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JaydenCJ", email = "aisingioro.kiyon@gmail.com" }]
keywords = ["shell", "alias", "history", "cli", "productivity", "dotfiles", "zsh", "bash"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
aliasmine = "aliasmine.cli:main"

[project.urls]
Homepage = "https://github.com/JaydenCJ/aliasmine"
Repository = "https://github.com/JaydenCJ/aliasmine"
Issues = "https://github.com/JaydenCJ/aliasmine/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
